# Dynamic-Agents-OpenHands

./: README.md  openhands-dashboard.service  pyproject.toml
docs/: api.md  cli.md  extensions.md  visualization.md
examples/: advanced_usage.py
scripts/: clean_install.sh  install_openhands.sh  integrate_dynamic_agents.sh  openhands-dashboard.service  setup_openhands_dev.sh  smart_install.sh  start_dashboard.sh
src/openhands_dynamic_agents/: __init__.py  cli.py
src/openhands_dynamic_agents/analysis/: tech_stack.py
src/openhands_dynamic_agents/core/: keyword_manager.py  prompt_processor.py
src/openhands_dynamic_agents/dashboard/: app.py  visualizations.py
src/openhands_dynamic_agents/utils/: exceptions.py
